--- a/app/src/main/res/layout/chat_right_item.xml
+++ b/app/src/main/res/layout/chat_right_item.xml
@@ -10,17 +10,16 @@ android:layout_height="wrap_content">
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginEnd="5dp"
-    android:layout_marginStart="8dp"
+    android:layout_marginStart="100dp"
     android:background="@drawable/chat_bubble_template"
     android:paddingBottom="8dp"
     android:paddingEnd="8dp"
     android:paddingStart="8dp"
-
     android:paddingTop="8dp"
     android:text="Hi. How are you? Some random text here and here. I need spend more time for android dev"
     android:fontFamily="@font/lato"
     android:textSize="15sp"
-    android:textColor="@android:color/black"
+    android:textColor="@color/black"
     app:layout_constrainedWidth="true"
     app:layout_constraintEnd_toStartOf="@+id/marginSpacer_beforeMessage"
     app:layout_constraintHorizontal_bias="1"
@@ -43,14 +42,14 @@ android:layout_height="wrap_content">
     android:src="@drawable/tail1"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="@+id/marginSpacer_beforeMessage"
-    app:tint="@color/yellow_musterd" />
+    app:tint="@color/darkyellowmusterd" />
 
 <ImageView
     android:layout_width="10dp"
     android:layout_height="10dp"
     android:layout_marginEnd="6dp"
     android:src="@drawable/tail2extension"
-    app:tint="@color/yellow_musterd"
+    app:tint="@color/darkyellowmusterd"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toStartOf="@+id/marginSpacer_beforeMessage" />
 
