--- a/app/src/main/res/layout/fragment_chatting.xml
+++ b/app/src/main/res/layout/fragment_chatting.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/background">
+    android:background="@color/white">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/topBar"
@@ -23,15 +23,25 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                >
+
+                <ImageView
+                    android:id="@+id/back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/left_arrrow"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"/>
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/profile_picture"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
                     android:src="@color/profile_default_tint"
-                    android:layout_centerVertical="true"/>
+                    android:layout_toEndOf="@+id/back"
+                    android:layout_marginStart="5dp"/>
 
                 <TextView
                     android:id="@+id/userID"
@@ -39,7 +49,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="10dp"
-                    android:fontFamily="@font/cocogoose"
+                    android:fontFamily="@font/gilroybold"
                     android:text=""
                     android:textColor="@color/dark"
                     android:textSize="17sp"
@@ -59,39 +69,59 @@
         android:layout_above="@id/cardview"
         />
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:id="@+id/cardview"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:cardBackgroundColor="@color/lightGrey"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true">
+        android:orientation="horizontal"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            app:cardCornerRadius="30dp"
+            app:cardBackgroundColor="@color/lightGrey"
+            android:layout_weight="1"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             >
-
             <EditText
                 android:id="@+id/edit_text_message"
-                android:layout_width="@dimen/_250sdp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/_12sdp"
-                android:layout_alignParentStart="true"
-                android:layout_marginEnd="12dp"
-                android:hint="Message"/>
-
-            <ImageView
-                android:id="@+id/send_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_send"
-                android:layout_toEndOf="@id/edit_text_message"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="12dp"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:hint="Type here"
+                android:cursorVisible="true"
+                android:textColorHighlight="@color/black"
+                app:backgroundTint="@color/lightGrey"
+                android:textCursorDrawable="@null"
                 />
-        </RelativeLayout>
-    </androidx.cardview.widget.CardView>
+        </androidx.cardview.widget.CardView>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/send_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_send"
+            app:fabCustomSize="50dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            app:backgroundTint="@color/yellow_musterd"
+            app:tint="@android:color/black"
+
+            />
+
+    </LinearLayout>
+
+
+
 
 </RelativeLayout>
