--- a/app/src/main/res/layout/main_chat_item.xml
+++ b/app/src/main/res/layout/main_chat_item.xml
@@ -2,20 +2,30 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginTop="5dp"
+    >
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/lightGrey"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
+        app:cardCornerRadius="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="2dp"
+android:layout_marginBottom="2dp"
         >
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             >
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_picture"
@@ -32,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10dp"
-                android:fontFamily="@font/cocogoose"
+                android:fontFamily="@font/gilroybold"
                 android:text=""
                 android:textColor="@color/dark"
                 android:textSize="17sp"
