--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,7 +3,8 @@
     <color name="y">#F7C80A</color>
     <color name="test">#FFBF01</color>
     <color name="auth">#E3B100</color>
-    <color name="yellow_musterd">#E3B100</color>
+    <color name="yellow_musterd">#9F7D02</color>
+    <color name="darkyellowmusterd">#9F7D02</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
@@ -11,6 +12,7 @@
     <color name="black">#FFFFFFFF</color>
     <color name="white">#1C1C1C</color>
     <color name="grey">#C6C6C6</color>
+    <color name="greyline">#454545</color>
     <color name="dark">#000000</color>
     <color name="lightGrey">#707070</color>
     <color name="darkGrey">#F2F2F2</color>
