--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="y">#F7C80A</color>
     <color name="test">#FFBF01</color>
     <color name="auth">#000000</color>
+    <color name="darkyellowmusterd">#E3B100</color>
     <color name="yellow_musterd">#E3B100</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -13,6 +14,7 @@
     <color name="dark">#000000</color>
     <color name="white">#F8F8FF</color>
     <color name="grey">#C6C6C6</color>
+    <color name="greyline">#C6C6C6</color>
     <color name="lightGrey">#F2F2F2</color>
     <color name="darkGrey">#707070</color>
     <color name="blue">#1B75B5</color>
