--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -8,6 +8,7 @@
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorAccent">@color/yellow_musterd</item>
         <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:statusBarColor">#856802</item>
     </style>
 
     <style name="Cut" parent="ShapeAppearance.MaterialComponents.MediumComponent">
