--- a/app/src/main/res/layout/apptoolbar.xml
+++ b/app/src/main/res/layout/apptoolbar.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:text="doNeed"
         android:fontFamily="@font/cocogoose"
-        android:textColor="@color/black"
+        android:textColor="#000000"
         android:layout_centerVertical="true"
         android:textSize="25sp"
         android:layout_marginStart="26dp"
@@ -23,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Donate"
+        android:textColor="#000000"
         android:fontFamily="@font/cocogoose"
         android:layout_centerVertical="true"
         android:textSize="25sp"
