--- a/app/src/main/res/menu/donate_toolbar.xml
+++ b/app/src/main/res/menu/donate_toolbar.xml
@@ -5,7 +5,9 @@
     <item
         android:id="@+id/donate_now"
         android:title="Post"
-        android:icon="@drawable/ic_baseline_done_outline_24"
+        android:icon="@drawable/check"
+        app:backgroundTint="@color/black"
+        android:iconTint="#000000"
         app:showAsAction="ifRoom|withText"
         />
     <item
