--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,5 +15,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">#9F7D02</item>
         <!-- Customize your theme here. -->
+
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 </resources>
