--- a/app/src/main/res/layout/details_item.xml
+++ b/app/src/main/res/layout/details_item.xml
@@ -19,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <com.zolad.zoominimageview.ZoomInImageView
         android:id="@+id/post_image"
         android:layout_width="match_parent"
         android:layout_height="0dp"
