--- a/app/src/main/res/layout/main_chat_item.xml
+++ b/app/src/main/res/layout/main_chat_item.xml
@@ -1,40 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="5dp"
-    >
+    android:layout_marginTop="5dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/lightGrey"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        app:cardCornerRadius="10dp"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
         android:layout_marginTop="2dp"
-android:layout_marginBottom="2dp"
-        >
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="2dp"
+        app:cardBackgroundColor="@color/lightGrey"
+        app:cardCornerRadius="10dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            >
+            android:layout_marginBottom="5dp">
+
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_picture"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
                 android:layout_marginStart="5dp"
-                android:src="@color/profile_default_tint"
-                android:layout_centerVertical="true"/>
+                android:src="@color/profile_default_tint" />
 
             <TextView
                 android:id="@+id/userID"
@@ -42,19 +40,18 @@ android:layout_marginBottom="2dp"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10dp"
+                android:layout_toEndOf="@id/profile_picture"
                 android:fontFamily="@font/gilroybold"
                 android:text=""
                 android:textColor="@color/dark"
                 android:textSize="17sp"
-                android:textStyle="bold"
-                android:layout_toEndOf="@id/profile_picture"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/user_chat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"/>
-
+                android:visibility="gone" />
 
 
         </RelativeLayout>
