--- a/app/src/main/res/layout/chat_left_item.xml
+++ b/app/src/main/res/layout/chat_left_item.xml
@@ -2,10 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_marginBottom="10dp"
+    android:layout_width="wrap_content"
+    android:layout_marginBottom="5dp"
+    android:layout_marginTop="5dp"
     android:layout_height="wrap_content"
-    android:elevation="2dp">
+    android:elevation="2dp"
+    android:layout_marginEnd="100dp">
 
     <TextView
         android:id="@+id/message_text"
@@ -24,7 +26,8 @@
         app:backgroundTint="@color/lightGrey"
         app:layout_constrainedWidth="true"
         app:layout_constraintStart_toEndOf="@+id/marginSpacer_beforeMessage"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.legacy.widget.Space
         android:id="@+id/marginSpacer_beforeMessage"
@@ -41,7 +44,7 @@
         android:layout_height="13dp"
         android:scaleX="-1"
         android:src="@drawable/tail1"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="7dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/marginSpacer_beforeMessage"
         app:layout_constraintStart_toStartOf="@+id/marginSpacer_beforeMessage"
@@ -51,7 +54,7 @@
         android:id="@+id/imageView2"
         android:layout_width="10dp"
         android:layout_height="10dp"
-        android:layout_marginStart="6dp"
+        android:layout_marginStart="5dp"
         android:src="@drawable/tail2extension"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/marginSpacer_beforeMessage"
