--- a/app/src/main/res/layout/details_item.xml
+++ b/app/src/main/res/layout/details_item.xml
@@ -34,21 +34,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/_230sdp"
-        android:layout_alignParentBottom="true"
         android:background="@drawable/layout_detail_view"
         app:cardBackgroundColor="@color/white"
         app:cardPreventCornerOverlap="false"
         app:cardElevation="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/post_image"
+        app:layout_constraintTop_toTopOf="@+id/post_image"
         app:layout_constraintVertical_bias="0.212"
         tools:layout_editor_absoluteX="0dp"
         >
-
+<!--        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_alignParentBottom="true"-->
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
+            android:scrollbarThumbVertical="@null"
             android:scrollbars="vertical">
 
             <RelativeLayout
