--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="yello_musterd_i">#FFD819</color>
     <color name="y">#F7C80A</color>
-    <color name="test">#FFBF01</color>
+    <color name="test">#E3B100</color>
     <color name="auth">#000000</color>
     <color name="darkyellowmusterd">#E3B100</color>
     <color name="yellow_musterd">#E3B100</color>
