--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -141,8 +141,8 @@
                         <Button
                             android:id="@+id/setting_button"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="6dp"
+                            android:layout_height="40dp"
+                            android:layout_marginTop="10dp"
                             android:background="@drawable/background3"
                             android:text="Profile settings"
                             android:textSize="15sp" />
