--- a/app/src/main/res/layout/fragment_donate.xml
+++ b/app/src/main/res/layout/fragment_donate.xml
@@ -78,7 +78,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:hint="Tittle"
+                    android:hint="Title"
                     android:textColorHint="@color/grey"
                     android:maxLines="5"
                     android:background="@drawable/text_background"
