--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
         android:id="@+id/login_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="480dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/button1"
         app:backgroundTint="@color/test"
         android:fontFamily="@font/cocogoose"
@@ -58,13 +58,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.559"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@id/signUp_btn"/>
 
     <Button
         android:id="@+id/signUp_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="0dp"
         android:background="@drawable/button1"
 
         android:fontFamily="@font/cocogoose"
@@ -78,13 +78,13 @@
         android:textStyle="bold"
         app:backgroundTint="@color/dark"
         app:layout_constraintBottom_toBottomOf="parent"
-
+        android:layout_marginBottom="@dimen/_92sdp"
 
         app:layout_constraintEnd_toEndOf="@+id/login_btn"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/login_btn"
-        app:layout_constraintTop_toBottomOf="@+id/login_btn"
-        app:layout_constraintVertical_bias="0.038" />
+
+         />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
