--- a/app/src/main/res/layout/details_item.xml
+++ b/app/src/main/res/layout/details_item.xml
@@ -154,14 +154,15 @@
 
                 <TextView
                     android:id="@+id/description"
-                    android:layout_width="20dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/details"
                     android:layout_alignStart="@+id/details"
-                    android:layout_marginStart="-1dp"
+                    android:layout_alignParentEnd="true"
                     android:layout_marginTop="13dp"
+                    android:layout_marginEnd="18dp"
                     android:fontFamily="@font/lato"
-                    android:text="fdsfsdffdasfdsfdsffdsfsdfsdafadsf"
+                    android:text=""
                     android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="@+id/details"
                     app:layout_constraintTop_toBottomOf="@id/details" />
