--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -53,7 +53,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="16dp"
-                    android:fontFamily="@font/cocogoose"
+                    android:fontFamily="@font/gilroybold"
 
                     android:gravity="center_horizontal"
                     android:text="Forgot your password?"
@@ -99,7 +99,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
-                    android:fontFamily="@font/lato"
+                    android:fontFamily="@font/gilroylight"
                     android:text="Enter your registered email below"
                     android:textColor="@color/darkGrey"
                     android:textSize="15sp"
@@ -112,7 +112,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:fontFamily="@font/lato"
+                    android:fontFamily="@font/gilroylight"
                     android:text="to recieve password reset instruction"
                     android:textColor="@color/darkGrey"
                     android:textSize="15sp"
@@ -138,7 +138,7 @@
                         android:id="@+id/stirng_signUp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-
+android:fontFamily="@font/gilroylight"
                         android:text="Remember password? "
                         android:textColor="@color/darkGrey" />
 
@@ -147,6 +147,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Login"
+                        android:fontFamily="@font/gilroybold"
                         android:textColor="@color/auth"
                         android:textStyle="bold" />
 
@@ -173,7 +174,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:background="@drawable/button1"
-                    android:fontFamily="@font/cocogoose"
+                    android:fontFamily="@font/gilroybold"
                     android:paddingLeft="66dp"
                     android:paddingTop="5dp"
                     android:paddingRight="66dp"
