--- a/app/src/main/res/layout/details_item.xml
+++ b/app/src/main/res/layout/details_item.xml
@@ -64,7 +64,7 @@
                     android:layout_alignParentTop="true"
                     android:layout_marginStart="17dp"
                     android:layout_marginTop="18dp"
-                    android:fontFamily="@font/cocogoose"
+                    android:fontFamily="@font/gilroybold"
                     android:text="asdasdasdsad"
                     android:textColor="@color/black"
                     android:textSize="25sp"
@@ -128,7 +128,7 @@
                     android:layout_marginTop="9dp"
                     android:layout_marginBottom="12dp"
                     android:layout_toEndOf="@+id/image_profile"
-                    android:fontFamily="@font/lato"
+                    android:fontFamily="@font/gilroybold"
                     android:text="name"
                     android:textColor="@color/darkGrey"
                     android:textSize="12sp"
@@ -144,7 +144,7 @@
                     android:layout_alignStart="@+id/image_profile"
                     android:layout_marginStart="1dp"
                     android:layout_marginTop="21dp"
-                    android:fontFamily="@font/cocogoose"
+                    android:fontFamily="@font/gilroybold"
                     android:text="Product Details"
                     android:textColor="@color/black"
                     android:textSize="13sp"
@@ -175,7 +175,7 @@
                     android:layout_alignStart="@+id/description"
                     android:layout_marginStart="0dp"
                     android:layout_marginTop="13dp"
-                    android:fontFamily="@font/cocogoose"
+                    android:fontFamily="@font/gilroybold"
 
                     android:text="Available Stock"
                     android:textColor="@color/black"
@@ -208,7 +208,7 @@
                     android:layout_alignStart="@+id/quantity_text"
                     android:layout_alignEnd="@+id/quantity_text"
                     android:layout_marginTop="13dp"
-                    android:fontFamily="@font/cocogoose"
+                    android:fontFamily="@font/gilroybold"
                     android:text="Category"
                     android:textColor="@color/black"
                     android:textSize="13sp"
@@ -238,13 +238,11 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/category_text"
                     android:layout_alignStart="@+id/category_text"
-                    android:layout_alignEnd="@+id/category_text"
                     android:layout_marginStart="0dp"
                     android:layout_marginTop="13dp"
-                    android:layout_marginEnd="48dp"
 
                     android:layout_marginBottom="20dp"
-                    android:fontFamily="@font/cocogoose"
+                    android:fontFamily="@font/gilroybold"
                     android:text="Location"
                     android:textColor="@color/black"
                     android:textSize="13sp"
@@ -303,7 +301,7 @@
                     android:layout_marginEnd="0dp"
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/button1"
-                    android:fontFamily="@font/cocogoose"
+                    android:fontFamily="@font/gilroybold"
                     android:paddingLeft="30dp"
                     android:paddingTop="5dp"
                     android:paddingRight="30dp"
