--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,7 +53,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="32dp"
-                    android:fontFamily="@font/cocogoose"
+                    android:fontFamily="@font/gilroybold"
                     android:text="LOGIN"
                     android:textColor="@color/auth"
                     android:textSize="41sp"
@@ -118,11 +118,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:layout_marginEnd="24dp"
-                    android:fontFamily="@font/lato"
+                    android:fontFamily="@font/gilroylight"
                     android:text="Forgot password?"
                     android:textColor="@color/darkGrey"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/password_field"
                     app:layout_constraintTop_toBottomOf="@+id/password_field" />
 
                 <LinearLayout
@@ -141,7 +140,7 @@
                         android:id="@+id/stirng_signUp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-
+android:fontFamily="@font/gilroylight"
                         android:text="Don't have an account? "
                         android:textColor="@color/darkGrey" />
 
@@ -150,7 +149,7 @@
                         android:id="@+id/txt_signUp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-
+android:fontFamily="@font/gilroybold"
                         android:text="Sign Up."
                         android:textColor="@color/auth"
                         android:textStyle="bold" />
@@ -163,7 +162,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:background="@drawable/button1"
-                    android:fontFamily="@font/cocogoose"
+                    android:fontFamily="@font/gilroybold"
                     android:paddingLeft="66dp"
                     android:paddingTop="5dp"
                     android:paddingRight="66dp"
