--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,9 +30,9 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="36dp"
         android:fontFamily="@font/gilroylight"
-        android:textColor="@color/dark"
         android:text="Your share is cause of someone's smile"
         android:textAlignment="center"
+        android:textColor="@color/dark"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/login_btn"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:background="@drawable/button1"
-        app:backgroundTint="@color/test"
         android:fontFamily="@font/cocogoose"
         android:paddingLeft="66dp"
         android:paddingTop="5dp"
@@ -55,18 +54,20 @@
         android:textColor="@color/dark"
         android:textSize="25sp"
         android:textStyle="bold"
+        app:backgroundTint="@color/test"
+        app:layout_constraintBottom_toTopOf="@id/signUp_btn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.559"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/signUp_btn"/>
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/signUp_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
-        android:background="@drawable/button1"
+        android:layout_marginBottom="@dimen/_92sdp"
 
+        android:background="@drawable/button1"
         android:fontFamily="@font/cocogoose"
         android:paddingLeft="50dp"
         android:paddingTop="5dp"
@@ -78,13 +79,12 @@
         android:textStyle="bold"
         app:backgroundTint="@color/dark"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="@dimen/_92sdp"
 
         app:layout_constraintEnd_toEndOf="@+id/login_btn"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/login_btn"
 
-         />
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
